Corrected z-index issue on modal

--- a/src/css/modalOffices.css
+++ b/src/css/modalOffices.css
@@ -1,5 +1,6 @@
 .ReactModal__Body--open nav {
   opacity: 0.5;
+  z-index: 0;
 }
 
 .ReactModal__Content {
